Remove old hack for legend text wrapping in unsupported version of IE as causes issues with screen readers

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -48,9 +48,3 @@ main,
     outline: none;
   }
 }
-
-legend {
-  // http://www.456bereastreet.com/archive/201210/how_to_line_wrap_text_in_legend_elements_even_in_ie/
-  white-space: normal;
-  display: table;
-}
